revise package json

--- a/package.json
+++ b/package.json
@@ -11,5 +11,5 @@
     "url": "https://github.com/meloalright/c2console/"
   },
   "author": "meloalright",
-  "license": "ISC"
+  "license": "MIT"
 }
